Update .gitignore for new file structure

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,20 @@
-*/*/*checkpoint
+*.isri
+*.log
+*.out
+*.save
+__pycache__/
+data/*.traineddata
+data/*.unicharset
+data/*/checkpoints/*.checkpoints/*
+data/*/reports
+data/*/tessdata*
+data/*/tmp
+data/*ground/*
+data/Latin
+data/eng
+data/logs
+fonts
+fonts.conf
+langdata
+save
+testdata
