Update scripts with new repo name

--- a/.gitignore
+++ b/.gitignore
@@ -5,14 +5,16 @@
 __pycache__/
 data/*.traineddata
 data/*.unicharset
-data/*/checkpoints/*.checkpoint
+data/*/checkpoints
 data/*/reports
-data/*/tessdata*
+data/*/tessdata_best
+data/*/tessdata_fast/*.traineddata
 data/*/tmp
 data/*ground*
 data/Latin
 data/eng
-data/logs
+data/logs/*ayer*.*
+data/logs/*IAST*.*
 fonts
 fonts.conf
 langdata
